--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wavemaker/expo-native-module",
   "version": "0.0.4",
   "description": "Provides API to interact with Native code from JS code.",
-  "main": "build/index.js",
+  "main": "src/index.ts",
   "types": "build/index.d.ts",
   "scripts": {
     "build": "expo-module build",
@@ -30,11 +30,11 @@
     "noop": "1.0.1"
   },
   "devDependencies": {
-    "expo-modules-core": "^1.0.3",
-    "@expo/config-plugins": "^4.0.14",
-    "@types/react": "^18.0.25",
-    "@types/react-native": "^0.70.6",
-    "expo-module-scripts": "^3.0.3"
+    "expo-modules-core": "1.12.24",
+    "@expo/config-plugins": "8.0.8",
+    "@types/react": "18.2.14",
+    "@types/react-native": "0.73.0",
+    "expo-module-scripts": "3.5.2"
   },
   "peerDependencies": {
     "expo": "*",
